# OOP

./: README.md
oop-extra-1/: CMakeLists.txt  RegistersConverter.cpp  RegistersConverter.h  RegistersParser.cpp  RegistersParser.h  main.cpp  main_linux.cpp  main_windows.cpp  test.h
oop-extra-1/Headers/: RegistersConverter.h  RegistersParser.h
oop-extra-1/Source/: RegistersConverter.cpp  RegistersParser.cpp
oop1/: CMakeLists.txt  IniException.h  IniParser.cpp  IniParser.h  main.cpp
oop2/: CMakeList.txt  CMakeLists.txt  StatisticMultiset.cpp  StatisticMultiset.h  main.cpp
oop3/: CMakeLists.txt  Wav.cpp  Wav.h  WavException.h  main.cpp
oop4/: CMakeLists.txt  FileStreamFactorization.cpp  FileStreamFactorization.h  IntegerFactorization.cpp  IntegerFactorization.h  main.cpp
oop5/: CMakeLists.txt  ConcurrentTask.cpp  ConcurrentTask.h  FileStreamFactorization.cpp  FileStreamFactorization.h  ITaskObserver.h  IntegerFactorization.cpp  IntegerFactorization.h  IntegerFactorizationExceptions.h  main.cpp
oop5/Cpp/: FileStreamFactorization.cpp  IntegerFactorization.cpp
oop5/Headers/: ConcurrentTask.h  FileStreamFactorization.h  IntegerFactorization.h
oop5/Headers/Interfaces/: Iterable.h  Observer.h  Readable.h  Stoppable.h  Storable.h  Writable.h
oop6/: CMakeLists.txt  main.cpp  vector.h
